--- a/date/2025-11/page-2.htm
+++ b/date/2025-11/page-2.htm
@@ -281,16 +281,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-29-free-node-subscribe.htm" title="VPN在线 | 11月29日18.9M/S|免费Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月29日18.9M/S|免费Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-11-clash-v2ray-ss-ssr.htm" title="VPN在线 | 11月11日22.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月11日22.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-6-node-share.htm" title="VPN在线 | 12月6日22.1M/S|免费SSR节点/Singbox节点/Shadowrocket节点/V2ray节点/Clash节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 12月6日22.1M/S|免费SSR节点/Singbox节点/Shadowrocket节点/V2ray节点/Clash节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-8-free-node-subscribe.htm" title="VPN在线 | 12月8日21.1M/S|免费Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 12月8日21.1M/S|免费Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-17-clash-verge-rev-node.htm" title="VPN在线 | 12月17日18.6M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 12月17日18.6M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-2-clash-node.htm" title="VPN在线 | 1月2日20.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 1月2日20.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-11-clash-v2ray-ss-ssr.htm" title="VPN在线 | 12月11日21.2M/S|免费V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 12月11日21.2M/S|免费V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-12-16-clash-node-daily-updates.htm" title="VPN在线 | 12月16日20.5M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/SSR节点/Clash节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 12月16日20.5M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/SSR节点/Clash节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-13-clash-verge-rev-windows.htm" title="VPN在线 | 12月13日20.1M/S|免费V2ray节点/Singbox节点/Clash节点/SSR节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 12月13日20.1M/S|免费V2ray节点/Singbox节点/Clash节点/SSR节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-20-clash-v2ray-ss-ssr.htm" title="VPN在线 | 12月20日20.9M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/Clash节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 12月20日20.9M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/Clash节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-29-free-node-subscribe.htm" title="VPN在线 | 11月29日18.9M/S|免费Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月29日18.9M/S|免费Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-15-clash-meta-github.htm" title="VPN在线 | 12月15日22.2M/S|免费V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 12月15日22.2M/S|免费V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-17-free-node-subscribe.htm" title="VPN在线 | 11月17日22.2M/S|免费V2ray节点/SSR节点/Singbox节点/Shadowrocket节点/Clash节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月17日22.2M/S|免费V2ray节点/SSR节点/Singbox节点/Shadowrocket节点/Clash节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-27-free-node-subscribe.htm" title="VPN在线 | 11月27日19.3M/S|免费Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月27日19.3M/S|免费Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-14-clash-meta-github.htm" title="VPN在线 | 12月14日18.6M/S|免费SSR节点/Singbox节点/V2ray节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 12月14日18.6M/S|免费SSR节点/Singbox节点/V2ray节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-12-2-clash-node-github.htm" title="VPN在线 | 12月2日21.5M/S|免费Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 12月2日21.5M/S|免费Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-3-clash-v2ray-ss-ssr.htm" title="VPN在线 | 12月3日21.2M/S|免费V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 12月3日21.2M/S|免费V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-19-clash-verge-rev-nodes.htm" title="VPN在线 | 11月19日20.3M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月19日20.3M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -302,7 +302,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
