--- a/free-nodes/page-6.htm
+++ b/free-nodes/page-6.htm
@@ -111,68 +111,84 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="xcblog-blog-list">
-                                        <div class="row item xcblog-blog-item" data-date="2025-10-06">
+                                        <div class="row item xcblog-blog-item" data-date="2025-11-09">
                         <div class="col-md-3">
                             <div class="img-box">
-                                <a href="/free-nodes/2025-10-6-node-share.htm" class="xcblog-blog-url">
-                                    <img class="img-fluid" src="/uploads/20240804/b42359a344a08ee40e32cc5816ecff31.webp" alt="VPN在线 | 10月6日18.3M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                <a href="/free-nodes/2025-11-9-clash-verge-rev-node-share.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/9379e278b9ce3feba3668a7f4947f899.webp" alt="VPN在线 | 11月9日21.1M/S|免费Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-9">
-                            <a href="/free-nodes/2025-10-6-node-share.htm" class="xcblog-blog-url">
+                            <a href="/free-nodes/2025-11-9-clash-verge-rev-node-share.htm" class="xcblog-blog-url">
                                 <h3 class="h1 fw-bold xcblog-blog-title">
-                                    VPN在线 | 10月6日18.3M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                                    VPN在线 | 11月9日21.1M/S|免费Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
                             </a>
-                            <p>这一次的节点更新覆盖了加拿大、韩国、美国、欧洲、日本、香港、新加坡等地区,最高速度可达18.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            <p>这一次的节点更新覆盖了香港、美国、新加坡、韩国、加拿大、欧洲、日本等地区,最高速度可达21.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-10-05">
+                                        <div class="row item xcblog-blog-item" data-date="2025-11-08">
                         <div class="col-md-3">
                             <div class="img-box">
-                                <a href="/free-nodes/2025-10-5-clash-verge-rev-nodes.htm" class="xcblog-blog-url">
-                                    <img class="img-fluid" src="/uploads/20240804/18cc897391fc28fdab0279a81532ebde.webp" alt="VPN在线 | 10月5日18.6M/S|免费V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                <a href="/free-nodes/2025-11-8-clash-node-daily-updates.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/68a2397f2a20b18df34051a474f48192.webp" alt="VPN在线 | 11月8日20M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-9">
-                            <a href="/free-nodes/2025-10-5-clash-verge-rev-nodes.htm" class="xcblog-blog-url">
+                            <a href="/free-nodes/2025-11-8-clash-node-daily-updates.htm" class="xcblog-blog-url">
                                 <h3 class="h1 fw-bold xcblog-blog-title">
-                                    VPN在线 | 10月5日18.6M/S|免费V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                                    VPN在线 | 11月8日20M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
                             </a>
-                            <p>这一次的节点更新覆盖了香港、韩国、加拿大、美国、新加坡、日本、欧洲等地区,最高速度可达18.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            <p>这一次的节点更新覆盖了加拿大、美国、新加坡、日本、香港、欧洲、韩国等地区,最高速度可达20 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-10-04">
+                                        <div class="row item xcblog-blog-item" data-date="2025-11-07">
                         <div class="col-md-3">
                             <div class="img-box">
-                                <a href="/free-nodes/2025-10-4-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <img class="img-fluid" src="/uploads/20240804/18cc897391fc28fdab0279a81532ebde.webp" alt="VPN在线 | 10月4日22.6M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                <a href="/free-nodes/2025-11-7-clash-verge-rev-node-github.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/a40fa3f2e1b1aa53c3a3a4e2dfd20e5c.webp" alt="VPN在线 | 11月7日20.8M/S|免费V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-9">
-                            <a href="/free-nodes/2025-10-4-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                            <a href="/free-nodes/2025-11-7-clash-verge-rev-node-github.htm" class="xcblog-blog-url">
                                 <h3 class="h1 fw-bold xcblog-blog-title">
-                                    VPN在线 | 10月4日22.6M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                                    VPN在线 | 11月7日20.8M/S|免费V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
                             </a>
-                            <p>这一次的节点更新覆盖了韩国、香港、美国、日本、欧洲、新加坡、加拿大等地区,最高速度可达22.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            <p>这一次的节点更新覆盖了韩国、香港、日本、美国、欧洲、新加坡、加拿大等地区,最高速度可达20.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-10-03">
+                                        <div class="row item xcblog-blog-item" data-date="2025-11-06">
                         <div class="col-md-3">
                             <div class="img-box">
-                                <a href="/free-nodes/2025-10-3-clash-verge-rev-windows.htm" class="xcblog-blog-url">
-                                    <img class="img-fluid" src="/uploads/20240804/1a1e7ba53b2042634b437a2232967d30.webp" alt="VPN在线 | 10月3日21.8M/S|免费Clash节点/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                <a href="/free-nodes/2025-11-6-clash-stash-node.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/38135ec94739702d8720d3820c1ac813.webp" alt="VPN在线 | 11月6日19.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-9">
-                            <a href="/free-nodes/2025-10-3-clash-verge-rev-windows.htm" class="xcblog-blog-url">
+                            <a href="/free-nodes/2025-11-6-clash-stash-node.htm" class="xcblog-blog-url">
                                 <h3 class="h1 fw-bold xcblog-blog-title">
-                                    VPN在线 | 10月3日21.8M/S|免费Clash节点/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                                    VPN在线 | 11月6日19.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
                             </a>
-                            <p>这一次的节点更新覆盖了香港、新加坡、加拿大、美国、欧洲、日本、韩国等地区,最高速度可达21.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            <p>这一次的节点更新覆盖了美国、新加坡、韩国、加拿大、香港、日本、欧洲等地区,最高速度可达19.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-11-05">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/free-nodes/2025-11-5-clash-verge-rev-nodes.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/38135ec94739702d8720d3820c1ac813.webp" alt="VPN在线 | 11月5日18.2M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-11-5-clash-verge-rev-nodes.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    VPN在线 | 11月5日18.2M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、加拿大、美国、日本、欧洲、新加坡、韩国等地区,最高速度可达18.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
                     
@@ -185,16 +201,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-7-clash-verge-rev-node-github.htm" title="VPN在线 | 11月7日20.8M/S|免费V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月7日20.8M/S|免费V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-5-clash-verge-rev-nodes.htm" title="VPN在线 | 11月5日18.2M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月5日18.2M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-15-clash-verge-rev-node-share.htm" title="VPN在线 | 10月15日21.7M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月15日21.7M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-29-free-node-subscribe.htm" title="VPN在线 | 11月29日18.9M/S|免费Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月29日18.9M/S|免费Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-8-free-node-subscribe.htm" title="VPN在线 | 12月8日21.1M/S|免费Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 12月8日21.1M/S|免费Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-12-clash-stash-node.htm" title="VPN在线 | 11月12日21.7M/S|免费Clash节点/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月12日21.7M/S|免费Clash节点/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-11-clash-v2ray-ss-ssr.htm" title="VPN在线 | 11月11日22.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月11日22.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-14-clash-verge-rev-github.htm" title="VPN在线 | 10月14日18.7M/S|免费Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月14日18.7M/S|免费Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-23-clash-verge-rev-windows.htm" title="VPN在线 | 11月23日22.7M/S|免费Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月23日22.7M/S|免费Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-26-clash-verge-rev-node-share.htm" title="VPN在线 | 11月26日20.8M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月26日20.8M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-27-clash-node.htm" title="VPN在线 | 10月27日20M/S|免费SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月27日20M/S|免费SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-5-clash-verge-rev-nodes.htm" title="VPN在线 | 11月5日18.2M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月5日18.2M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-14-clash-meta-github.htm" title="VPN在线 | 11月14日19.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月14日19.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-23-clash-verge-rev-windows.htm" title="VPN在线 | 12月23日19.8M/S|免费Clash节点/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 12月23日19.8M/S|免费Clash节点/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-20-clash-verge-rev-node-share.htm" title="VPN在线 | 11月20日18.2M/S|免费Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月20日18.2M/S|免费Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-17-clash-verge-rev-node.htm" title="VPN在线 | 12月17日18.6M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 12月17日18.6M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-3-clash-verge-rev-windows.htm" title="VPN在线 | 1月3日20.1M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 1月3日20.1M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-13-clash-verge-rev-windows.htm" title="VPN在线 | 12月13日20.1M/S|免费V2ray节点/Singbox节点/Clash节点/SSR节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 12月13日20.1M/S|免费V2ray节点/Singbox节点/Clash节点/SSR节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-2-clash-node.htm" title="VPN在线 | 1月2日20.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 1月2日20.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点推荐，在线VPN机场梯子购买推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -206,13 +222,13 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                     </ul>
     </div>
